# Ongoing

./: .gitignore
Cntl/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
Cntl/components/bsp_ws_1_47/: CMakeLists.txt  bsp_ws_1_47.c
Cntl/components/bsp_ws_1_47/include/: bsp_ws_1_47.h
Cntl/main/: CMakeLists.txt  Kconfig.projbuild  esp_now_hub.c  esp_now_hub.h  fs.c  fs.h  idf_component.yml  main.c  ui_common.h  ui_dashboard.c  ui_dashboard.h  ui_font.c  ui_font.h  ui_font_test.c  ui_font_test.h  ui_gas.c  ui_gas.h  ui_input.c  ui_input.h  ui_main.c  ui_main.h  ui_nodes.c  ui_nodes.h  ui_palette.c  ui_palette.h  ui_screen.c  ui_screen.h  ui_styles.h  ui_timer.c  ui_timer.h  web_dashboard.c  web_dashboard.h
Cntl/main/fonts/bpp1/: nanum_gothic_14.c  nanum_gothic_16.c  nanum_gothic_20.c
Cntl/patches/: fix_tiny_ttf_kerning.py
Common/components/battery_monitor/: CMakeLists.txt  battery.c
Common/components/battery_monitor/include/: battery.h
Common/components/esp_lcd_jd9853/: esp_lcd_jd9853.c
Common/components/esp_lcd_touch_axs5106/: esp_lcd_touch_axs5106.c
Common/components/esp_lcd_touch_axs5106/include/: esp_lcd_touch_axs5106.h
Common/components/esp_now_link/: CMakeLists.txt
Common/components/esp_now_link/include/: esp_now_link.h
Common/components/history_log/: CMakeLists.txt  history_log.c
Common/components/history_log/include/: history_log.h
Common/components/sensor_dht22/: CMakeLists.txt  dht22.c
Common/components/sensor_dht22/include/: dht22.h
Common/components/sensor_scd41/: CMakeLists.txt  scd41.c
Common/components/sensor_scd41/include/: scd41.h
Sens/: CMakeLists.txt
Sens/components/bsp_c6/: CMakeLists.txt  bsp_c6.c
Sens/components/bsp_c6/include/: bsp_c6.h
Sens/main/: CMakeLists.txt  Kconfig.projbuild  esp_now_node.c  esp_now_node.h  idf_component.yml  sensor-c6.c  wifi_dashboard.c  wifi_dashboard.h
