idf_component_register(
    SRCS
        "sensor-c6.c"
        "wifi_dashboard.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        freertos
        log
        lvgl
        bsp_c6
        sensor_dht22
        sensor_scd41
        battery_monitor
        history_log
        esp_adc
        esp_driver_gpio
        esp_driver_usb_serial_jtag
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
)
