idf_component_register(
    SRCS
        "bsp_c6.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_lcd
        esp_lcd_jd9853
        esp_lcd_touch_axs5106
        espressif__esp_lcd_touch
        driver
        esp_driver_gpio
        esp_driver_spi
        esp_driver_i2c
        esp_driver_ledc
        esp_timer
        lvgl
        freertos
        log
)
